--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,9 @@ img {
 .textAlignRight {
 	text-align: right;
 }
+.errorText {
+	color: #f00;
+}
 
 /************ NAVIGATION ************/
 #header ul {
@@ -216,6 +219,7 @@ img {
 	margin-top: 0em;
 }
 .scheduleTime {
+	font-weight: bold;
 	width: 30%;
 	text-align: right;
 	padding-right: 20px;
@@ -224,15 +228,33 @@ img {
 	padding-bottom: .25em;
 }
 .scheduleSession {
+	font-weight: bold;
 	font-size: 1em;
 	float: right;
 	width: 65%;
 	padding-bottom: .25em;
 }
 .scheduleSessionTitles {
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 1em;
+	text-shadow: none;
 	padding-left: 35%;
-	padding-bottom: 1em;
 }
+.accordion h3 , .ui-accordion-content{
+	text-align: left;
+	border: none;
+	background: #ffffd9;
+	font-family: Tahoma, Geneva, sans-serif;
+	font-size: 1em;
+	color: #000;
+	text-shadow: none;
+	padding-left: 35%;
+}
+.ui-icon {
+    background-image: url(images/ui-icons_CF3503_256x240.png);
+	margin-right: .5em;
+}
+
 .descriptionSessions {
 	text-shadow: 0px 0px 0px;
 	text-align: left;
